[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/walls.png" type="Texture" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://tilesets/UI_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/coin.png" type="Texture" id=4]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 80.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 8, 8 )
texture = ExtResource( 1 )
hframes = 3
frame = 2
region_enabled = true
region_rect = Rect2( 192, 240, 48, 16 )

[node name="Sprite2" type="Sprite" parent="Control"]
position = Vector2( 24, 8 )
texture = ExtResource( 1 )
hframes = 3
frame = 2
region_enabled = true
region_rect = Rect2( 192, 240, 48, 16 )

[node name="Sprite3" type="Sprite" parent="Control"]
position = Vector2( 40, 8 )
texture = ExtResource( 1 )
hframes = 3
frame = 2
region_enabled = true
region_rect = Rect2( 192, 240, 48, 16 )

[node name="Sprite4" type="Sprite" parent="Control"]
position = Vector2( 56, 8 )
texture = ExtResource( 1 )
hframes = 3
region_enabled = true
region_rect = Rect2( 192, 240, 48, 16 )

[node name="Sprite5" type="Sprite" parent="Control"]
position = Vector2( 72, 8 )
texture = ExtResource( 1 )
hframes = 3
region_enabled = true
region_rect = Rect2( 192, 240, 48, 16 )

[node name="HBoxContainer" type="Control" parent="."]
margin_left = 254.0
margin_right = 320.0
margin_bottom = 16.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_left = 2.0
margin_right = 18.0
margin_bottom = 16.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 20.0
margin_right = 64.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 3 )
text = "0000"
__meta__ = {
"_edit_use_anchors_": false
}
